--- a/index.html
+++ b/index.html
@@ -271,8 +271,32 @@
             </div>
       </section>
       <!-- parte inferior: footer -->
-      <footer>
-
+      <footer class="footer">
+          <div class="p-container">
+              <h4>Guía de compra</h4>
+          </div>
+          <div class="list">
+              <ul>
+                <li>
+                    <a href="">Preguntas frecuentes</a>
+                </li>  
+              </ul>
+              <ul>
+                <li>
+                    <a href="">Pago</a>
+                </li>  
+              </ul>
+              <ul>
+                <li>
+                    <a href="">Envío</a>
+                </li>  
+              </ul>
+              <ul>
+                <li>
+                    <a href="">Devoluciones</a>
+                </li>  
+              </ul>
+          </div>
       </footer>
   </body>
 </html>
